# switch-gdx

./: .gitattributes  .gitignore  LIBRARIES.md  README.md  TESTS.md  build.gradle  gradle.properties  settings.gradle
switch-gdx/res/: CMakeLists.txt  FindFFI.cmake  Makefile  SDL2_mixer.lib  com_badlogic_gdx_graphics_g2d_freetype_FreeType_natives.cpp  com_badlogic_gdx_physics_box2d_Body_natives.cpp  com_badlogic_gdx_physics_box2d_ChainShape_natives.cpp  com_badlogic_gdx_physics_box2d_CircleShape_natives.cpp  com_badlogic_gdx_physics_box2d_ContactImpulse_natives.cpp  com_badlogic_gdx_physics_box2d_Contact_natives.cpp  com_badlogic_gdx_physics_box2d_EdgeShape_natives.cpp  com_badlogic_gdx_physics_box2d_Fixture_natives.cpp  com_badlogic_gdx_physics_box2d_Joint_natives.cpp  com_badlogic_gdx_physics_box2d_Manifold_natives.cpp  com_badlogic_gdx_physics_box2d_PolygonShape_natives.cpp  com_badlogic_gdx_physics_box2d_Shape_natives.cpp  com_badlogic_gdx_physics_box2d_World_natives.cpp  com_badlogic_gdx_physics_box2d_joints_DistanceJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_FrictionJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_GearJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_MotorJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_MouseJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_PrismaticJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_PulleyJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_RevoluteJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_RopeJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_WeldJoint_natives.cpp  com_badlogic_gdx_physics_box2d_joints_WheelJoint_natives.cpp  desktop.cmake  etc1_utils.cpp  gdx2d.c  gles2.c  natives.cpp  platform.c  stb_image.h  switchgdx.clearwing.json  tinyfiledialogs.c
switch-gdx/res/glad/: gles2.h
switch-gdx/res/switchgdx/: FreeType_native.cpp  Instrinsics.cpp  Platform.cpp  SwitchGDX.cpp  etc1_utils.cpp  gdx2d.c  gdx_buffer_utils.h  tinyfiledialogs.c
switch-gdx/res/switchgdx/box2d/: Body_native.cpp  ChainShape_native.cpp  CircleShape_native.cpp  ContactImpulse_native.cpp  Contact_native.cpp  DistanceJoint_native.cpp  EdgeShape_native.cpp  Fixture_native.cpp  FrictionJoint_native.cpp  GearJoint_native.cpp  Joint_native.cpp  Manifold_native.cpp  MotorJoint_native.cpp  MouseJoint_native.cpp  PolygonShape_native.cpp  PrismaticJoint_native.cpp  RopeJoint_native.cpp  (+6 more)
(+221 files in other folders)
